# pet-frontend

./: .gitignore  README.md  USAGE.md  USAGE.zh-TW.md  biometeo-front.py  biometeo-front.spec  installer.iss  main.py  pyproject.toml  run.spec  run_windows.spec  wrap_up.sh  x.csv
.github/workflows/: release.yml
scripts/: build_macos_dmg.sh
src/biometeo_frontend/: fisheye_view.py  main.py
