[project]
name = "biometeo-frontend"
version = "0.3.0"
description = "A friendly UI app designed for biometeo, shows function documentation, default values"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "biometeo==0.5.2",
    "customtkinter>=5.2.2",
    "pandas>=2.3.3",
    "tkinterdnd2>=0.4.3",
]

[project.scripts]
biometeo-front = "biometeo_frontend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biometeo_frontend"]

[tool.hatch.build.targets.sdist]
include = ["src/biometeo_frontend/**", "README.md", "pyproject.toml"]
